--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       Remove all code in `styles.css`!
     -->
     <link rel="stylesheet" href="styles.css" />
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="index.js"></script>
   </head>
   <body>
     <!-- <div class="loader"></div> -->
@@ -72,6 +72,8 @@
       </table>
       <div id="cv"></div>
     </main>
-    <footer></footer>
+    <footer>
+      <p>Made by Bruno Vallejos &copy;2024</p>
+    </footer>
   </body>
 </html>
